# AssistOnto

./: .gitignore  Containerfile  Makefile  README.md  assistonto-nginx.conf  assistonto.service  main.py  pyproject.toml  requirements.txt  sanitize_md.py  schema.sql  webapp.py
assistonto/: __init__.py  __main__.py  app.py  default_settings.py  gunicorn_config.py  main.py  sanitize_md.py  schema.sql
assistonto/src/: app.py
assistonto/static/: main.js  site.css
assistonto/templates/: ai_choice.html  ainame.html  app.html  assistant_message.html  base.html  login.html  message.html  owl-reasoner-results.html  register.html  settings.html  user_message.html
examples/: import-inconsistent.ttl  local-inconsistency.ttl  owl-inference.py
sparql-ontology/: data-properties.sparql  most-common-properties.sparql  object-properties.sparql  property-domain-range.sparql  property-entities.sparql  property-info.sparql  property-no-range-domain.sparql  sparql.py
src/assistonto/: __about__.py  __init__.py  __main__.py  app.py  docdb.py  schema.sql
static/: main.js  site.css
templates/: app.html  assistant_message.html  base.html  error.html  index.html  login.html  message.html  next_user_message.html  settings.html  user_message.html
