[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assistonto"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "bruno cuconato (@odanoburu)" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "Flask~=3.0.2",
  "gunicorn~=22.0.0",
  "Markdown~=3.5.2",
  "openai~=1.30.1",
]

[tool.hatch.version]
path = "assistonto/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.envs.dev]
dependencies = [
  "ruff",
]
[tool.hatch.envs.dev.scripts]
server = "python assistonto/main.py server --port 8000 --db-path assistonto/assistonto.db"
check = "ruff check assistonto"

[tool.hatch.build.targets.wheel]
only-packages = true
# packages = ["assistonto/src"]

# [tool.hatch.envs.types]
# extra-dependencies = [
#   "mypy>=1.0.0",
# ]

# [tool.coverage.run]
# source_pkgs = ["assistonto", "tests"]
# branch = true
# parallel = true
# omit = [
#   "assistonto/src/__about__.py",
# ]

# [tool.coverage.paths]
# assistonto = ["assistonto/src", "*/assistonto/assistonto/src"]
# tests = ["tests", "*/assistonto/tests"]

# [tool.coverage.report]
# exclude_lines = [
#   "no cov",
#   "if __name__ == .__main__.:",
#   "if TYPE_CHECKING:",
# ]
