[tool.poetry]
name = "assistonto"
version = "0.1.0"
description = ""
authors = ["Bruno Cuconato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask="~3.0.2"
gunicorn="~22.0.0"
Markdown="~3.5.2"
openai="~1.30"
owlrl="~6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[tool.poetry.scripts]
assistonto = "assistonto.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
