[tool.poetry]
name = "assistonto"
version = "0.1.0"
description = ""
authors = ["Bruno Cuconato"]
readme = "README.md"
packages = [{ include = "assistonto", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
Flask="~3.1"
gunicorn="~23.0.0"
Markdown="~3.7"
openai="~1.69"
owlrl="~7.1.3"
chromadb = "^0.6.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[tool.poetry.scripts]
assistonto = "assistonto.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
